Created the footer

--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
     <footer>
         <div class="contained">
             <section>
-                <div>
+                <div class="footer-section">
                     <h5>Sitemap</h5>
                     <ul>
-                        <li>Home</li>
-                        <li>About</li>
-                        <li>Contact</li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="footer-section">
                     <h5>Socialmedia</h5>
                     <ul>
                         <li>LinkedIn</li>
@@ -91,15 +91,15 @@
                         <li>Instagram</li>
                     </ul>
                 </div>
-                <div>
+                <div class="footer-section last">
                     <h5>Contact</h5>
                     <ul>
-                        <li>SocialLifeInstantPerformance@gmail.com</li>
+                        <li><a href="mailto:SocialLifeInstantPerformance@gmail.com">SocialLifeInstantPerformance@gmail.com</a></li>
                     </ul>
                 </div>
             </section>
             <section>
-                <p>Copyright © 2020 All rights reserverd - Design by Slip B.V.</p>
+                <p>Copyright © 2020 All rights reserverd - Designed by Slip B.V.</p>
             </section>
         </div>
         <img src="img/Footershape.svg" alt="Cloud">
