--- a/index.html
+++ b/index.html
@@ -15,20 +15,24 @@
         </ul>
     </nav>
     <header>
-        <!-- <img src="logo" alt="Logo - Slip"> -->
-        <div class="banner"><h1>Slip</h1></div>
-        <div class="company">
-            <h1>Social Life<br>Instant Performance</h1>
-            <sub>Improve people in the digital world</sub>
-        </div>
-        <img id="headerImg" src="img/Online Library.svg" alt="Vector Library image">
-        <div class="bottom">
-            <svg xmlns="http://www.w3.org/2000/svg" width="93.792" height="150.236" viewBox="0 0 93.792 51.236">
-                <g transform="translate(3.536)" opacity="0.5">
-                    <path class="svg-arrow" d="M897.189,970.375l43.361,43.361,43.36-43.361" transform="translate(-897.189 -965)" fill="none" stroke="#032261" stroke-linecap="round" stroke-linejoin="round" stroke-width="5"/>
-                    <circle class="svg-circle" cx="5.5" cy="5.5" r="5.5" transform="translate(36.811)" fill="#032261"/>
-                </g>
-            </svg>
+        <div class="header-container">
+            <!-- <img src="logo" alt="Logo - Slip"> -->
+            <div class="banner"><h1>Slip</h1></div>
+            <div class="company">
+                <h1>Social Life<br>Instant Performance</h1>
+                <sub>Improve people in the digital world</sub>
+            </div>
+            <img id="headerImg" src="img/Online Library.svg" alt="Vector Library image">
+            <div class="bottom">
+                <a href="#about">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="93.792" height="150.236" viewBox="0 0 93.792 51.236">
+                        <g transform="translate(3.536)" opacity="0.5">
+                            <path class="svg-arrow" d="M897.189,970.375l43.361,43.361,43.36-43.361" transform="translate(-897.189 -965)" fill="none" stroke="#5877B6" stroke-linecap="round" stroke-linejoin="round" stroke-width="5"/>
+                            <circle class="svg-circle" cx="5.5" cy="5.5" r="5.5" transform="translate(36.811)" fill="#5877B6"/>
+                        </g>
+                    </svg>
+                </a>
+            </div>
         </div>
     </header>
     <main>
