Put send button in the middle

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <input type="text" name="subject">
                 <label for="body">Bericht:</label>
                 <textarea name="body"></textarea>
-                <button>Verstuur</button>
+                <div class="form-bottom"><button>Verstuur</button></div>
             </form>
         </section>
     </main>
