Added site description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slip | Home</title>
+  <title>Slip B.V.</title>
+  <meta name="description" content="Slip B.V. is een startup in de onderwijssector, gevestigd te Dordrecht. SLIP staat voor Social Life
+  Instant Performance. Slip probeert manieren te ontwikkelen om de snel veranderende wereld en alles wat
+  daarbij komt kijken te vertalen naar het onderwijs vanuit een interdisciplinair en gamification perspectief.
+  Slip heeft expertise op het gebied van ontwikkeling van onderwijs en digitale content ontwikkeling. Zoek je informatie of wil je contact opnemen kijk dan op deze website.">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/animation.css">
 </head>
