--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
           </ul>
         </div>
       </div>
-      <div>
+      <div class="footer-copyright">
         <p>Copyright © 2020 All rights reserverd - Designed by Slip B.V.</p>
       </div>
     </div>
