First webpack setup

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slip B.V.</title>
+  <title>Slip B.V. | Homepagina</title>
   <meta name="description"
     content="Slip B.V. is een startup in de onderwijssector, gevestigd te Dordrecht. SLIP staat voor Social Life
   Instant Performance. Slip probeert manieren te ontwikkelen om de snel veranderende wereld en alles wat
   daarbij komt kijken te vertalen naar het onderwijs vanuit een interdisciplinair en gamification perspectief.
   Slip heeft expertise op het gebied van ontwikkeling van onderwijs en digitale content ontwikkeling. Zoek je informatie of wil je contact opnemen kijk dan op deze website.">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/animation.css">
 </head>
 
 <body>
@@ -644,7 +642,7 @@
       <h2>Over Ons</h2>
       <div>
         <p>
-          <img src="img/creativity-education.svg" alt="Creativity">
+          <img src="./img/creativity-education.svg" alt="Creativity">
         </p>
         <p>Slip B.V. is een startup in de onderwijssector, gevestigd te Dordrecht. SLIP staat voor Social Life
           Instant Performance en is recentelijk opgericht om een gamified social media platform voor de onderwijsmarkt
@@ -657,7 +655,7 @@
       <h2>Wie zijn wij?</h2>
       <div class="card-container">
         <article class="card">
-          <img src="img/n-kadiric.jpg" alt="Person">
+          <img src="./img/n-kadiric.jpg" alt="Person">
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse dolor qui eligendi ratione exercitationem
             expedita sint accusantium necessitatibus provident quod. Est, et! Dicta accusamus atque natus.
             Aliquid recusandae iusto fugit.</p>
@@ -673,7 +671,7 @@
           <h4>Abdel Agharbi</h4>
         </article>
         <article class="card">
-          <img src="img/r-springer.jpg" alt="Person">
+          <img src="./img/r-springer.jpg" alt="Person">
           <p>Ik ben Roy Springer medeoprichter van Slip B.V..Ik ben vanuit de Game Industrie terecht gekomen
             in de onderwijswereld.
             Ik heb veel kennis van digitale tools, gamification en neem ik altijd de creativiteit uit de Game industrie
@@ -735,9 +733,9 @@
         <p>Copyright © 2020 All rights reserverd - Designed by Slip B.V.</p>
       </div>
     </div>
-    <img src="img/footer-shape.svg" alt="Cloud">
+    <img src="./img/footer-shape.svg" alt="Cloud">
   </footer>
-  <script src="app.bundle.js"></script>
+  <!-- <%= htmlWebpackPlugin.tags.bodyTags %> -->
 </body>
 
 </html>
