Fixed some minor issues

--- a/src/index.html
+++ b/src/index.html
@@ -672,10 +672,10 @@
         </article>
         <article class="card">
           <img src="./img/r-springer.jpg" alt="Person">
-          <p>Ik ben Roy Springer medeoprichter van Slip B.V..Ik ben vanuit de Game Industrie terecht gekomen
+          <p>Ik ben Roy Springer medeoprichter van Slip B.V. Ik ben vanuit de Game Industrie terecht gekomen
             in de onderwijswereld.
             Ik heb veel kennis van digitale tools, gamification en neem ik altijd de creativiteit uit de Game industrie
-            mee in alle projecten. Ik zet mijn creativiteit in om de digitale wereld, gamification,
+            mee in alle projecten. Verder gebruik ik mijn creativiteit om de digitale wereld, gamification,
             bedrijven en scholen met elkaar te verbinden.</p>
           <hr>
           <h4>Roy Springer</h4>
