Updated the text

--- a/src/index.html
+++ b/src/index.html
@@ -689,7 +689,7 @@
         </article>
         <article class="card">
           <img src="./img/r-springer.jpg" alt="Person">
-          <p>Ik ben Roy Springer medeoprichter van Slip B.V. Ik ben vanuit de Game Industrie terecht gekomen
+          <p>Ik ben Roy Springer, medeoprichter van SLIP B.V. Ik ben vanuit de Game Industrie terecht gekomen
             in de onderwijswereld.
             Ik heb veel kennis van digitale tools, gamification en neem ik altijd de creativiteit uit de Game industrie
             mee in alle projecten. Verder gebruik ik mijn creativiteit om de digitale wereld, gamification,
