Rewrote some code for a beter centerd position of the footer image

--- a/src/index.html
+++ b/src/index.html
@@ -750,7 +750,9 @@
         <p>Copyright © 2020 All rights reserverd - Designed by Slip B.V.</p>
       </div>
     </div>
-    <img src="./img/footer-shape.svg" alt="Cloud">
+    <div class="background">
+      <img src="./img/footer-shape.svg" alt="Cloud">
+    </div>
   </footer>
 </body>
 
