Updated the teksten

--- a/src/index.html
+++ b/src/index.html
@@ -671,17 +671,23 @@
       <div class="card-container">
         <article class="card">
           <img src="./img/n-kadiric.jpg" alt="Person">
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse dolor qui eligendi ratione exercitationem
-            expedita sint accusantium necessitatibus provident quod. Est, et! Dicta accusamus atque natus.
-            Aliquid recusandae iusto fugit.</p>
+          <p>Om maar met de spreekwoordelijke deur in huis te vallen, mijn naam is Nermin Kadiric, docent Economie, en
+            medeoprichter van Slip.<br>
+            Na tien jaar in het bedrijfsleven te hebben gewerkt heb ik besloten om mijn opgedane praktijkervaring en
+            kunde over te dragen op de jongere generatie.<br>
+            Tijdens mijn docentschap zag ik ‘loopholes’ en kansen om binnen het onderwijsland nieuwe uitdagingen aan te
+            grijpen als entrepreneur. De alledaagse verhalen en ervaringen met mijn leerlingen zijn de directe
+            inspiratie en aanleiding geweest voor het opzetten van de SLIP app; een platform waarin wij een krachtige
+            engagement creëren tussen de leerling en de buitenwereld. </p>
           <hr>
           <h4 class="name">Nermin Kadiric</h4>
         </article>
         <article class="card">
           <img src="https://via.placeholder.com/200" alt="Person">
-          <p>Mijn naam is Abdel Agharbi, medeoprichter van SLIP B.V. Ik heb in het verleden de opleiding Social work
-            gevolgd en met succes afgerond. Dit is een studie met een maatschappelijke touch. Ik ben nu een aantal jaren
-            werkzaam als jongerencoach. Het coachen, trainen, begeleiden van jongeren doe ik met veel passie en plezier.
+          <p>Mijn naam is Abdel Agharbi, medeoprichter van Slip.<br> Ik heb in het verleden de opleiding Social work
+            gevolgd en met succes afgerond. Dit is een studie met een maatschappelijke touch.<br><br>
+            Ik ben nu een aantal jaren werkzaam als jongerencoach. Het coachen, trainen, begeleiden van jongeren doe ik
+            met veel passie en plezier.<br>
             Middels deze applicatie willen wij voor de jongeren de verbinding zijn met het bedrijfsleven.
           </p>
           <hr>
@@ -689,10 +695,14 @@
         </article>
         <article class="card">
           <img src="./img/r-springer.jpg" alt="Person">
-          <p>Ik ben Roy Springer, medeoprichter van SLIP B.V. Ik ben vanuit de Game Industrie terecht gekomen
-            in de onderwijswereld.
-            Ik heb veel kennis van digitale tools, gamification en neem ik altijd de creativiteit uit de Game industrie
-            mee in alle projecten. Verder gebruik ik mijn creativiteit om de digitale wereld, gamification,
+          <p>Ik ben Roy Springer, docent Software development, en medeoprichter van Slip. Ik ben vanuit de Game
+            Industrie terecht gekomen in de onderwijswereld.<br>
+            Na vijf jaar in de Game industrie te hebben gewerkt heb ik besloten om de onderwijs wereld in te gaan en
+            mijn kennis te delen. <br>
+            Tijdens mijn periode in de game industrie en in de onderwijs wereld heb ik veel kennis en vaardigheden
+            opgedaan van digitale tools, 'Serious gaming' en gamification.
+            Verder heb ik veel creativiteit en neem ik dit altijd mee in projecten.
+            Ook gebruik ik mijn creativiteit om de digitale wereld, gamification,
             bedrijven en scholen met elkaar te verbinden.</p>
           <hr>
           <h4>Roy Springer</h4>
