Fixed firefox bug

--- a/src/index.html
+++ b/src/index.html
@@ -761,7 +761,9 @@
       </div>
     </div>
     <div class="background">
-      <img src="./img/footer-shape.svg" alt="Cloud">
+      <div class="backgroundHolder">
+        <img src="./img/footer-shape.svg" alt="Cloud">
+      </div>
     </div>
   </footer>
 </body>
